# Pyusb-RP-PICO

./: .gitignore  README.md  main.py
device/: CMakeLists.txt  main.c  tusb_config.h  usb_descriptors.c
